--- a/vinaya/other-procedures.html
+++ b/vinaya/other-procedures.html
@@ -225,7 +225,7 @@ recites:</p>
 Ayaṃ paṭhama-bhāgo <em>therassa</em> pāpuṇāti.<br />
 Avasesā bhāgā amhākañc’eva pāpuṇanti.<br />
 Bhikkhūnañca sīladharānaṃ sāmaṇerānaṃ gahaṭṭhānaṃ<br />
-Te yathāsukhaṃ paribhuñjantu.’ (×3)</p>
+Te yathāsukhaṃ paribhuñjantu.’</p>
 </blockquote>
 <p>‘therassa’ → ‘mahātherassa’</p>
 <div class="english">
