--- a/404.html
+++ b/404.html
@@ -3,7 +3,8 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Bhikkhu Manual - Bhikkhu Manual</title>
+        <title></title>
+        <base href="/">
 
 
         <!-- Custom HTML head -->
@@ -143,58 +144,14 @@
 
                 <div id="content" class="content">
                     <main>
-                        <div class="titlepage-cover">
-  <img src="./includes/images/dhammacakka-circle_w300.png" alt="Bhikkhu Manual" />
-  <h1 id="bhikkhu-manual"><a class="header" href="#bhikkhu-manual">Bhikkhu Manual</a></h1>
-  <a href="https://bhikkhu-manual.github.io">bhikkhu-manual.github.io</a>
-</div>
-<div>
-  <p><em>Last updated on: 2020-10-28</em></p>
-</div>
-<h2 id="downlads"><a class="header" href="#downlads">Downlads</a></h2>
-<p><em>(NOTE: See the <a href="./print-guide.html">Print Guide</a> for press-quality print files and guidelines.)</em></p>
-<div class="grid download-item">
-  <div class="col-1-3 item-cover">
-    <img src="./includes/images/handbook-desktop-cover.jpg" alt="Bhikkhu Manual Handbook" />
-  </div>
-  <div class="col-2-3 item-description">
-    <h3 id="bhikkhu-manual-handbook-edition"><a class="header" href="#bhikkhu-manual-handbook-edition">Bhikkhu Manual Handbook Edition</a></h3>
-    <p><em>Essential Chants and Vinaya Notes</em></p>
-    <p><a href="https://bhikkhu-manual.github.io/includes/docs/Bhikkhu-Manual-Handbook.pdf">PDF</a></p>
-  </div>
-</div>
-<div class="grid download-item">
-  <div class="col-1-3 item-cover">
-    <img src="./includes/images/reference-desktop-cover.jpg" alt="Bhikkhu Manual Reference" />
-  </div>
-  <div class="col-2-3 item-description">
-    <h3 id="bhikkhu-manual-reference-edition"><a class="header" href="#bhikkhu-manual-reference-edition">Bhikkhu Manual Reference Edition</a></h3>
-    <p><em>All Chants with English Translations and Vinaya Notes</em></p>
-    <p><a href="https://bhikkhu-manual.github.io/includes/docs/Bhikkhu-Manual-Reference.pdf">PDF for desktop and office printing</a></p>
-    <p><a href="https://bhikkhu-manual.github.io/includes/docs/Bhikkhu-Manual-Reference.epub">EPUB for phones and tablets</a></p>
-    <p><a href="https://bhikkhu-manual.github.io/includes/docs/Bhikkhu-Manual-Reference.mobi">MOBI for Kindle</a></p>
-  </div>
-</div>
-<h2 id="further-references"><a class="header" href="#further-references">Further references</a></h2>
-<h3 id="discipline-and-conventions-of-the-theravada-forest-tradition"><a class="header" href="#discipline-and-conventions-of-the-theravada-forest-tradition">Discipline and Conventions of the Theravada Forest Tradition</a></h3>
-<p><em>by Ajahn Sucitto</em></p>
-<ul>
-<li><a href="https://bhikkhu-manual.github.io/includes/docs/Discipline-and-Conventions-Ajahn-Sucitto.pdf">PDF</a>, <a href="https://bhikkhu-manual.github.io/includes/docs/Discipline-and-Conventions-Ajahn-Sucitto.epub">EPUB</a>, <a href="https://bhikkhu-manual.github.io/includes/docs/Discipline-and-Conventions-Ajahn-Sucitto.mobi">MOBI</a></li>
-</ul>
-<h3 id="rituals--observances"><a class="header" href="#rituals--observances">Rituals &amp; Observances</a></h3>
-<p><em>by Ajahn Sucitto and Ajahn Candasiri</em></p>
-<ul>
-<li><a href="https://bhikkhu-manual.github.io/includes/docs/Rituals-and-Obervances-Ajahn-Sucitto-and-Ajahn-Candasiri.pdf">PDF</a></li>
-</ul>
+                        <h1 id="document-not-found-404"><a class="header" href="#document-not-found-404">Document not found (404)</a></h1>
+<p>This URL is invalid, sorry. Please use the navigation bar or search to continue.</p>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
 
-                            <a rel="next" href="first-lines.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
-                                <i class="fa fa-angle-right"></i>
-                            </a>
 
                         <div style="clear: both"></div>
                     </nav>
@@ -203,9 +160,6 @@
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
 
-                    <a rel="next" href="first-lines.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
-                        <i class="fa fa-angle-right"></i>
-                    </a>
             </nav>
 
         </div>
