--- a/namo-tassa.html
+++ b/namo-tassa.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Bhikkhu Manual - Bhikkhu Manual</title>
+        <title>Namo Tassa - Bhikkhu Manual</title>
 
 
         <!-- Custom HTML head -->
@@ -82,7 +82,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="titlepage.html">Bhikkhu Manual</a></li><li class="chapter-item expanded affix "><a href="first-lines.html">List of First Lines</a></li><li class="chapter-item expanded "><a href="essential-chants.html"><strong aria-hidden="true">1.</strong> Essential Chants</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="chants/morning-chanting.html"><strong aria-hidden="true">1.1.</strong> Morning Chanting</a></li><li class="chapter-item expanded "><a href="chants/evening-chanting.html"><strong aria-hidden="true">1.2.</strong> Evening Chanting</a></li><li class="chapter-item expanded "><a href="chants/reflections.html"><strong aria-hidden="true">1.3.</strong> Reflections</a></li><li class="chapter-item expanded "><a href="chants/parittas.html"><strong aria-hidden="true">1.4.</strong> Paritta Chants</a></li><li class="chapter-item expanded "><a href="chants/anumodana.html"><strong aria-hidden="true">1.5.</strong> Anumodanā</a></li><li class="chapter-item expanded "><a href="chants/funeral-chants.html"><strong aria-hidden="true">1.6.</strong> Funeral Chants</a></li><li class="chapter-item expanded "><a href="chants/suttas.html"><strong aria-hidden="true">1.7.</strong> Suttas</a></li><li class="chapter-item expanded "><a href="chants/patimokkha-chants.html"><strong aria-hidden="true">1.8.</strong> Pāṭimokkha Chants</a></li><li class="chapter-item expanded "><a href="chants/sri-lanka.html"><strong aria-hidden="true">1.9.</strong> Chants Used in Sri Lanka</a></li></ol></li><li class="chapter-item expanded "><a href="vinaya-notes.html"><strong aria-hidden="true">2.</strong> Vinaya Notes</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="vinaya/guidelines.html"><strong aria-hidden="true">2.1.</strong> Guidelines</a></li><li class="chapter-item expanded "><a href="vinaya/requisites.html"><strong aria-hidden="true">2.2.</strong> Requisites</a></li><li class="chapter-item expanded "><a href="vinaya/offences.html"><strong aria-hidden="true">2.3.</strong> Offences</a></li><li class="chapter-item expanded "><a href="vinaya/uposatha.html"><strong aria-hidden="true">2.4.</strong> Uposatha</a></li><li class="chapter-item expanded "><a href="vinaya/rains-and-kathina.html"><strong aria-hidden="true">2.5.</strong> Rains and Kathina</a></li><li class="chapter-item expanded "><a href="vinaya/other-procedures.html"><strong aria-hidden="true">2.6.</strong> Other Procedures</a></li><li class="chapter-item expanded "><a href="vinaya/useful-notes.html"><strong aria-hidden="true">2.7.</strong> Useful Notes</a></li></ol></li><li class="chapter-item expanded "><a href="appendix.html"><strong aria-hidden="true">3.</strong> Appendix</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="pali-phonetics-and-pronunciation.html"><strong aria-hidden="true">3.1.</strong> Pāli Phonetics and Pronunciation</a></li><li class="chapter-item expanded "><a href="quotations.html"><strong aria-hidden="true">3.2.</strong> Quotations</a></li><li class="chapter-item expanded "><a href="namo-tassa.html"><strong aria-hidden="true">3.3.</strong> Namo Tassa</a></li></ol></li><li class="chapter-item expanded "><a href="print-guide.html"><strong aria-hidden="true">4.</strong> Print Guide</a></li><li class="chapter-item expanded "><a href="copyright.html"><strong aria-hidden="true">5.</strong> Copyright</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="titlepage.html">Bhikkhu Manual</a></li><li class="chapter-item expanded affix "><a href="first-lines.html">List of First Lines</a></li><li class="chapter-item expanded "><a href="essential-chants.html"><strong aria-hidden="true">1.</strong> Essential Chants</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="chants/morning-chanting.html"><strong aria-hidden="true">1.1.</strong> Morning Chanting</a></li><li class="chapter-item expanded "><a href="chants/evening-chanting.html"><strong aria-hidden="true">1.2.</strong> Evening Chanting</a></li><li class="chapter-item expanded "><a href="chants/reflections.html"><strong aria-hidden="true">1.3.</strong> Reflections</a></li><li class="chapter-item expanded "><a href="chants/parittas.html"><strong aria-hidden="true">1.4.</strong> Paritta Chants</a></li><li class="chapter-item expanded "><a href="chants/anumodana.html"><strong aria-hidden="true">1.5.</strong> Anumodanā</a></li><li class="chapter-item expanded "><a href="chants/funeral-chants.html"><strong aria-hidden="true">1.6.</strong> Funeral Chants</a></li><li class="chapter-item expanded "><a href="chants/suttas.html"><strong aria-hidden="true">1.7.</strong> Suttas</a></li><li class="chapter-item expanded "><a href="chants/patimokkha-chants.html"><strong aria-hidden="true">1.8.</strong> Pāṭimokkha Chants</a></li><li class="chapter-item expanded "><a href="chants/sri-lanka.html"><strong aria-hidden="true">1.9.</strong> Chants Used in Sri Lanka</a></li></ol></li><li class="chapter-item expanded "><a href="vinaya-notes.html"><strong aria-hidden="true">2.</strong> Vinaya Notes</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="vinaya/guidelines.html"><strong aria-hidden="true">2.1.</strong> Guidelines</a></li><li class="chapter-item expanded "><a href="vinaya/requisites.html"><strong aria-hidden="true">2.2.</strong> Requisites</a></li><li class="chapter-item expanded "><a href="vinaya/offences.html"><strong aria-hidden="true">2.3.</strong> Offences</a></li><li class="chapter-item expanded "><a href="vinaya/uposatha.html"><strong aria-hidden="true">2.4.</strong> Uposatha</a></li><li class="chapter-item expanded "><a href="vinaya/rains-and-kathina.html"><strong aria-hidden="true">2.5.</strong> Rains and Kathina</a></li><li class="chapter-item expanded "><a href="vinaya/other-procedures.html"><strong aria-hidden="true">2.6.</strong> Other Procedures</a></li><li class="chapter-item expanded "><a href="vinaya/useful-notes.html"><strong aria-hidden="true">2.7.</strong> Useful Notes</a></li></ol></li><li class="chapter-item expanded "><a href="appendix.html"><strong aria-hidden="true">3.</strong> Appendix</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="pali-phonetics-and-pronunciation.html"><strong aria-hidden="true">3.1.</strong> Pāli Phonetics and Pronunciation</a></li><li class="chapter-item expanded "><a href="quotations.html"><strong aria-hidden="true">3.2.</strong> Quotations</a></li><li class="chapter-item expanded "><a href="namo-tassa.html" class="active"><strong aria-hidden="true">3.3.</strong> Namo Tassa</a></li></ol></li><li class="chapter-item expanded "><a href="print-guide.html"><strong aria-hidden="true">4.</strong> Print Guide</a></li><li class="chapter-item expanded "><a href="copyright.html"><strong aria-hidden="true">5.</strong> Copyright</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -143,56 +143,57 @@
 
                 <div id="content" class="content">
                     <main>
-                        <div class="titlepage-cover">
-  <img src="./includes/images/dhammacakka-circle_w300.png" alt="Bhikkhu Manual" />
-  <h1 id="bhikkhu-manual"><a class="header" href="#bhikkhu-manual">Bhikkhu Manual</a></h1>
-  <a href="https://bhikkhu-manual.github.io">bhikkhu-manual.github.io</a>
-</div>
-<div>
-  <p><em>Last updated on: 2020-10-28</em></p>
-</div>
-<h2 id="downlads"><a class="header" href="#downlads">Downlads</a></h2>
-<p><em>(NOTE: See the <a href="./print-guide.html">Print Guide</a> for press-quality print files and guidelines.)</em></p>
-<div class="grid download-item">
-  <div class="col-1-3 item-cover">
-    <img src="./includes/images/handbook-desktop-cover.jpg" alt="Bhikkhu Manual Handbook" />
-  </div>
-  <div class="col-2-3 item-description">
-    <h3 id="bhikkhu-manual-handbook-edition"><a class="header" href="#bhikkhu-manual-handbook-edition">Bhikkhu Manual Handbook Edition</a></h3>
-    <p><em>Essential Chants and Vinaya Notes</em></p>
-    <p><a href="https://bhikkhu-manual.github.io/includes/docs/Bhikkhu-Manual-Handbook.pdf">PDF</a></p>
-  </div>
-</div>
-<div class="grid download-item">
-  <div class="col-1-3 item-cover">
-    <img src="./includes/images/reference-desktop-cover.jpg" alt="Bhikkhu Manual Reference" />
-  </div>
-  <div class="col-2-3 item-description">
-    <h3 id="bhikkhu-manual-reference-edition"><a class="header" href="#bhikkhu-manual-reference-edition">Bhikkhu Manual Reference Edition</a></h3>
-    <p><em>All Chants with English Translations and Vinaya Notes</em></p>
-    <p><a href="https://bhikkhu-manual.github.io/includes/docs/Bhikkhu-Manual-Reference.pdf">PDF for desktop and office printing</a></p>
-    <p><a href="https://bhikkhu-manual.github.io/includes/docs/Bhikkhu-Manual-Reference.epub">EPUB for phones and tablets</a></p>
-    <p><a href="https://bhikkhu-manual.github.io/includes/docs/Bhikkhu-Manual-Reference.mobi">MOBI for Kindle</a></p>
-  </div>
-</div>
-<h2 id="further-references"><a class="header" href="#further-references">Further references</a></h2>
-<h3 id="discipline-and-conventions-of-the-theravada-forest-tradition"><a class="header" href="#discipline-and-conventions-of-the-theravada-forest-tradition">Discipline and Conventions of the Theravada Forest Tradition</a></h3>
-<p><em>by Ajahn Sucitto</em></p>
+                        <h1 id="methods-of-chanting-namo-tassa"><a class="header" href="#methods-of-chanting-namo-tassa">Methods of Chanting Namo Tassa</a></h1>
+<p>Single bar | = short pause<br />
+Double bar || = medium pause</p>
+<h2 id="method-1"><a class="header" href="#method-1">Method 1</a></h2>
+<p>Uses:</p>
 <ul>
-<li><a href="https://bhikkhu-manual.github.io/includes/docs/Discipline-and-Conventions-Ajahn-Sucitto.pdf">PDF</a>, <a href="https://bhikkhu-manual.github.io/includes/docs/Discipline-and-Conventions-Ajahn-Sucitto.epub">EPUB</a>, <a href="https://bhikkhu-manual.github.io/includes/docs/Discipline-and-Conventions-Ajahn-Sucitto.mobi">MOBI</a></li>
+<li>Regular Morning and Evening Chanting</li>
+<li>Giving Precepts</li>
 </ul>
-<h3 id="rituals--observances"><a class="header" href="#rituals--observances">Rituals &amp; Observances</a></h3>
-<p><em>by Ajahn Sucitto and Ajahn Candasiri</em></p>
+<p>Namo tassa bhagavato arahato sammāsambuddhassa ||<br />
+Namo tassa bhagavato arahato sammāsambuddhassa ||<br />
+Namo tassa bhagavato arahato sammāsambuddhassa</p>
+<h2 id="method-2"><a class="header" href="#method-2">Method 2</a></h2>
+<p>Uses:</p>
 <ul>
-<li><a href="https://bhikkhu-manual.github.io/includes/docs/Rituals-and-Obervances-Ajahn-Sucitto-and-Ajahn-Candasiri.pdf">PDF</a></li>
+<li>Funeral Chanting (<em>Matika</em>)</li>
 </ul>
+<p>Namo<br />
+tas || sa bhagavato arahato sammāsambud || dhas || sa Namo<br />
+tas || sa bhagavato arahato sammāsambud || dhas || sa Namo<br />
+tas || sa bhagavato arahato sammāsambud || dhas || sa</p>
+<h2 id="method-3"><a class="header" href="#method-3">Method 3</a></h2>
+<p>Uses:</p>
+<ul>
+<li>Saṅghakamma (including Pāṭimokkha)</li>
+<li>When giving Dhamma Talks</li>
+</ul>
+<p>Namo tassa bhagavato arahato sammāsambuddhassa Namo tassa ||<br />
+bhagavato arahato sammāsambuddhassa ||<br />
+Namo tassa bhagavato ||<br />
+arahato sammā ||<br />
+sambuddhassa</p>
+<h2 id="method-4"><a class="header" href="#method-4">Method 4</a></h2>
+<p>Uses:</p>
+<ul>
+<li>Paritta Chanting</li>
+</ul>
+<p>Namo tassa bhagavato ||<br />
+arahato | sammā | sambud | dhas || sa Namo tas || sa bhagavato |<br />
+arahato | sammā | sambud | dhas || sa Namo tas || sa bhagavato |<br />
+arahato | sammā | sambud | dhas || sa</p>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
+                            <a rel="prev" href="quotations.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                                <i class="fa fa-angle-left"></i>
+                            </a>
 
-                            <a rel="next" href="first-lines.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next" href="print-guide.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -202,8 +203,11 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
+                    <a rel="prev" href="quotations.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                        <i class="fa fa-angle-left"></i>
+                    </a>
 
-                    <a rel="next" href="first-lines.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next" href="print-guide.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
