--- a/namo-tassa.html
+++ b/namo-tassa.html
@@ -160,10 +160,10 @@ Namo tassa bhagavato arahato sammāsambuddhassa</p>
 <ul>
 <li>Funeral Chanting (<em>Matika</em>)</li>
 </ul>
-<p>Namo<br />
-tas || sa bhagavato arahato sammāsambud || dhas || sa Namo<br />
-tas || sa bhagavato arahato sammāsambud || dhas || sa Namo<br />
-tas || sa bhagavato arahato sammāsambud || dhas || sa</p>
+<p>Namo tas ||<br />
+sa bhagavato arahato sammāsambud || dhas || sa Namo tas ||<br />
+sa bhagavato arahato sammāsambud || dhas || sa Namo tas ||<br />
+sa bhagavato arahato sammāsambud || dhas || sa</p>
 <h2 id="method-3"><a class="header" href="#method-3">Method 3</a></h2>
 <p>Uses:</p>
 <ul>
