--- a/namo-tassa.html
+++ b/namo-tassa.html
@@ -147,7 +147,6 @@
 <p>Single bar | = short pause<br />
 Double bar || = medium pause</p>
 <h2 id="method-1"><a class="header" href="#method-1">Method 1</a></h2>
-<p>Uses:</p>
 <ul>
 <li>Regular Morning and Evening Chanting</li>
 <li>Giving Precepts</li>
@@ -156,7 +155,6 @@ Double bar || = medium pause</p>
 Namo tassa bhagavato arahato sammāsambuddhassa ||<br />
 Namo tassa bhagavato arahato sammāsambuddhassa</p>
 <h2 id="method-2"><a class="header" href="#method-2">Method 2</a></h2>
-<p>Uses:</p>
 <ul>
 <li>Funeral Chanting (<em>Matika</em>)</li>
 </ul>
@@ -165,18 +163,14 @@ sa bhagavato arahato sammāsambud || dhas || sa Namo tas ||<br />
 sa bhagavato arahato sammāsambud || dhas || sa Namo tas ||<br />
 sa bhagavato arahato sammāsambud || dhas || sa</p>
 <h2 id="method-3"><a class="header" href="#method-3">Method 3</a></h2>
-<p>Uses:</p>
 <ul>
 <li>Saṅghakamma (including Pāṭimokkha)</li>
 <li>When giving Dhamma Talks</li>
 </ul>
-<p>Namo tassa bhagavato arahato sammāsambuddhassa Namo tassa ||<br />
-bhagavato arahato sammāsambuddhassa ||<br />
-Namo tassa bhagavato ||<br />
-arahato sammā ||<br />
-sambuddhassa</p>
+<p>Namo tassa bhagavato arahato sammāsambuddhassa<br />
+Namo tassa || bhagavato arahato sammāsambuddhassa ||<br />
+Namo tassa bhagavato || arahato sammā || sambuddhassa</p>
 <h2 id="method-4"><a class="header" href="#method-4">Method 4</a></h2>
-<p>Uses:</p>
 <ul>
 <li>Paritta Chanting</li>
 </ul>
