--- a/chants/funeral-chants.html
+++ b/chants/funeral-chants.html
@@ -646,7 +646,7 @@ Their total stilling is bliss.</p>
 </blockquote>
 <blockquote>
 <p>All living beings are dying,<br />
-have dies, and will die.<br />
+have died, and will die.<br />
 In the same way, I will die:<br />
 I have no doubt about this.</p>
 </blockquote>
