--- a/chants/suttas.html
+++ b/chants/suttas.html
@@ -186,7 +186,7 @@
 <li><a href="#aditta-pariyaya">Āditta-pariyāya-sutta</a></li>
 <li><a href="#fire-sermon">The Fire Sermon</a></li>
 <li><a href="#anapanassati">Ānāpānassati-sutta</a></li>
-<li><a href="#dhaj-agga">Dhaj’agga Sutta</a></li>
+<li><a href="#dhaj-agga">Dhaj’agga-sutta</a></li>
 <li><a href="#girimananda">Girimānanda-sutta</a></li>
 </ul>
 <h2 id="dhammacakkappavattana-sutta"><a class="header" href="#dhammacakkappavattana-sutta">Dhammacakkappavattana-sutta<a id="dhammacakkappavattana"></a></a></h2>
@@ -1187,7 +1187,7 @@ without any further attachment.</p>
 </blockquote>
 </div>
 <p><em>M.III.78</em></p>
-<h2 id="dhajagga-sutta"><a class="header" href="#dhajagga-sutta">Dhaj’agga Sutta<a id="dhaj-agga"></a></a></h2>
+<h2 id="dhajagga-sutta"><a class="header" href="#dhajagga-sutta">Dhaj’agga-sutta<a id="dhaj-agga"></a></a></h2>
 <p>[Evam-me sutaṃ.] Ekaṃ samayaṃ Bhagavā, Sāvatthiyaṃ viharati, Jeta-vane
 Anāthapiṇḍikassa ārāme. Tatra kho Bhagavā bhikkhū āmantesi: “bhikkhavo-ti”.
 “Bhadante-ti,” te bhikkhū Bhagavato paccassosuṃ. Bhagavā etad avoca:</p>
@@ -1251,7 +1251,7 @@ Evaṃ-Buddhaṃ sarantānaṃ,<br />
 Dhammaṃ saṅghañ-ca bhikkhavo;<br />
 Bhayaṃ vā chambhitattaṃ vā,<br />
 Loma-haṃso na hessatī-ti.”</p>
-<p>Dhaj’agga Suttaṃ Niṭṭhitaṃ.</p>
+<p>Dhaj’agga-suttaṃ niṭṭhitaṃ.</p>
 <p><em>S.I.218</em></p>
 <h2 id="girimānanda-sutta"><a class="header" href="#girimānanda-sutta">Girimānanda-sutta<a id="girimananda"></a></a></h2>
 <p>[Evaṃ me sutaṃ] 
